--- a/package.json
+++ b/package.json
@@ -88,9 +88,11 @@
   },
   "dependencies": {
     "@commonify/lowdb": "^3.0.0",
+    "@types/follow-redirects": "^1.14.1",
     "@types/fs-extra": "^9.0.13",
     "electron-squirrel-startup": "^1.0.0",
     "eslint-import-resolver-custom-alias": "^1.3.0",
+    "follow-redirects": "^1.15.1",
     "fs-extra": "^10.1.0",
     "kitsu": "^10.0.0-alpha.23"
   }
