--- a/package.json
+++ b/package.json
@@ -94,6 +94,6 @@
     "eslint-import-resolver-custom-alias": "^1.3.0",
     "follow-redirects": "^1.15.1",
     "fs-extra": "^10.1.0",
-    "kitsu": "^10.0.0-alpha.23"
+    "kitsu": "9.1.25"
   }
 }
