--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "cross-env-shell NODE_EN=dev electron-forge start",
+    "dev": "cross-env-shell NODE_EN=dev electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make",
+    "make": "cross-env-shell NODE_EN=prod electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
@@ -40,6 +41,19 @@
         {
           "name": "@electron-forge/maker-rpm",
           "config": {}
+        }
+      ],
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-s3",
+          "platforms": [
+            "darwin",
+            "linux"
+          ],
+          "config": {
+            "bucket": "my-bucket",
+            "folder": "my/key/prefix"
+          }
         }
       ],
       "plugins": [
@@ -75,6 +89,7 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "electron": "19.0.3",
     "eslint": "^8.16.0",
