--- a/package.json
+++ b/package.json
@@ -46,6 +46,18 @@
           "config": {}
         }
       ],
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-s3",
+          "config": {
+            "accessKeyId": "AKIASONON2GCNNQ4EQEC",
+            "bucket": "bestcycling-production",
+            "folder": "desktop/qiqe-temp",
+            "public": true,
+            "secretAccessKey": "ldjC50UcM7XSHCd791ElYb78/8Fb3u3+yYcBkAlj"
+          }
+        }
+      ],
       "plugins": [
         [
           "@electron-forge/plugin-webpack",
@@ -76,6 +88,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.63",
+    "@electron-forge/publisher-s3": "^6.0.0-beta.64",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
@@ -86,7 +99,9 @@
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "fork-ts-checker-webpack-plugin": "^6.5.2",
+    "i": "^0.3.7",
     "node-loader": "^2.0.0",
+    "npm": "^8.13.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.0",
     "typescript": "~4.5.4"
