--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "@types/follow-redirects": "^1.14.1",
     "@types/fs-extra": "^9.0.13",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.3",
     "electron-squirrel-startup": "^1.0.0",
     "eslint-import-resolver-custom-alias": "^1.3.0",
     "follow-redirects": "^1.15.1",
