--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/fs-extra": "^9.0.13",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
+    "dotenv": "^16.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "eslint-import-resolver-custom-alias": "^1.3.0",
     "follow-redirects": "^1.15.1",
