--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@electron-forge/maker-zip": "6.0.0-beta.63",
     "@electron-forge/plugin-webpack": "6.0.0-beta.63",
     "@electron-forge/publisher-s3": "6.0.0-beta.64",
+    "@types/nodemailer": "^6.4.6",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
@@ -54,6 +55,7 @@
   "dependencies": {
     "@commonify/lowdb": "^3.0.0",
     "@electron-forge/maker-dmg": "^6.0.0-beta.64",
+    "@sentry/electron": "^4.0.2",
     "@types/follow-redirects": "^1.14.1",
     "@types/fs-extra": "^9.0.13",
     "axios": "^0.27.2",
@@ -63,6 +65,7 @@
     "eslint-import-resolver-custom-alias": "^1.3.0",
     "follow-redirects": "^1.15.1",
     "fs-extra": "^10.1.0",
-    "kitsu": "10.0.0-alpha.23"
+    "kitsu": "10.0.0-alpha.23",
+    "nodemailer": "^6.7.8"
   }
 }
