--- a/package.json
+++ b/package.json
@@ -26,46 +26,45 @@
     "forge": "./forge.config.js"
   },
   "devDependencies": {
-    "@electron-forge/cli": "6.0.0-beta.63",
-    "@electron-forge/maker-deb": "6.0.0-beta.63",
-    "@electron-forge/maker-rpm": "6.0.0-beta.63",
-    "@electron-forge/maker-squirrel": "6.0.0-beta.63",
-    "@electron-forge/maker-zip": "6.0.0-beta.63",
-    "@electron-forge/plugin-webpack": "6.0.0-beta.63",
-    "@electron-forge/publisher-s3": "6.0.0-beta.64",
+    "@electron-forge/cli": "^6.0.0-beta.66",
+    "@electron-forge/maker-deb": "^6.0.0-beta.66",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.66",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.66",
+    "@electron-forge/maker-zip": "^6.0.0-beta.66",
+    "@electron-forge/plugin-webpack": "^6.0.0-beta.66",
+    "@electron-forge/publisher-s3": "^6.0.0-beta.66",
     "@types/nodemailer": "^6.4.6",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "@vercel/webpack-asset-relocator-loader": "^1.7.0",
-    "aws-sdk": "^2.1162.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "aws-sdk": "^2.1225.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
-    "electron": "^21.0.0",
-    "eslint": "^8.16.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
+    "electron": "^21.0.1",
+    "eslint": "^8.24.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-import": "^2.26.0",
-    "fork-ts-checker-webpack-plugin": "^6.5.2",
-    "i": "^0.3.7",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
-    "npm": "^8.13.0",
+    "npm": "^8.19.2",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.0",
-    "typescript": "~4.5.4"
+    "ts-loader": "^9.4.1",
+    "typescript": "~4.8.4"
   },
   "dependencies": {
     "@commonify/lowdb": "^3.0.0",
-    "@electron-forge/maker-dmg": "^6.0.0-beta.64",
+    "@electron-forge/maker-dmg": "^6.0.0-beta.66",
     "@sentry/electron": "^4.0.2",
     "@types/follow-redirects": "^1.14.1",
     "@types/fs-extra": "^9.0.13",
     "axios": "^0.27.2",
-    "dayjs": "^1.11.3",
-    "dotenv": "^16.0.1",
+    "dayjs": "^1.11.5",
+    "dotenv": "^16.0.2",
     "electron-squirrel-startup": "^1.0.0",
     "eslint-import-resolver-custom-alias": "^1.3.0",
-    "follow-redirects": "^1.15.1",
+    "follow-redirects": "^1.15.2",
     "fs-extra": "^10.1.0",
-    "kitsu": "10.0.0-alpha.23",
-    "nodemailer": "^6.7.8"
+    "kitsu": "^10.0.2",
+    "nodemailer": "^6.8.0"
   }
 }
