--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "desktop-electron-webpack",
   "productName": "Bestcycling TV",
-  "version": "5.0.4",
+  "version": "5.0.5",
   "description": "Aplicación de escritorio Bestcycling desarrollada con electron",
   "main": ".webpack/main",
   "scripts": {
@@ -14,7 +14,8 @@
     "publish": "cross-env-shell ENV=dev electron-forge publish",
     "publish-test": "node process/gen_manifest && cross-env-shell ENV=dev electron-forge publish --arch=universal",
     "publish-test-devprod": "node process/gen_manifest && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "test": "jest"
   },
   "keywords": [],
   "author": {
@@ -45,9 +46,11 @@
     "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-import": "^2.26.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "jest": "^29.1.2",
     "node-loader": "^2.0.0",
     "npm": "^8.19.2",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "typescript": "~4.8.4"
   },
