--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,14 @@
     },
     "target": "es5"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "build",
+    "test",
+    "coverage",
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx"
+  ]
 }
