--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "desktop-electron-webpack",
   "productName": "Bestcycling TV",
-  "version": "5.0.12",
+  "version": "5.1.1",
   "description": "Aplicación de escritorio Bestcycling desarrollada con electron",
   "main": ".webpack/main",
   "scripts": {
@@ -12,7 +12,7 @@
     "make:dev": "cross-env-shell ENV=dev electron-forge make",
     "make:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make",
     "publish": "node process/gen_manifest && cross-env-shell ENV=dev electron-forge publish --arch=universal",
-    "publish:devprod": "node process/gen_manifest && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish",
+    "publish:devprod": "node process/gen_manifest && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
     "lint": "eslint --ext .ts,.tsx .",
     "test": "jest"
   },
