fix: don't open in google if external

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "desktop-electron-webpack",
   "productName": "Bestcycling TV",
-  "version": "5.1.1",
+  "version": "5.1.2",
   "description": "Aplicación de escritorio Bestcycling desarrollada con electron",
   "main": ".webpack/main",
   "scripts": {
     "start": "cross-env-shell ENV=dev electron-forge start",
     "dev": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge start",
     "package": "electron-forge package",
-    "make": "cross-env-shell ENV=prod electron-forge make",
-    "make:dev": "cross-env-shell ENV=dev electron-forge make",
+    "make": "cross-env-shell ENV=prod electron-forge make --arch=universal",
+    "make:dev": "cross-env-shell ENV=dev electron-forge make --arch=universal",
     "make:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make",
     "publish": "node process/gen_manifest && cross-env-shell ENV=dev electron-forge publish --arch=universal",
     "publish:devprod": "node process/gen_manifest && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
@@ -33,6 +33,7 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.66",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.66",
     "@electron-forge/publisher-s3": "^6.0.0-beta.66",
+    "@electron/universal": "^1.3.3",
     "@types/nodemailer": "^6.4.6",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
