fix: windows package

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge start",
     "package": "electron-forge package",
     "make": "cross-env-shell ENV=prod electron-forge make --arch=universal",
-    "make:dev": "cross-env-shell ENV=dev electron-forge make --arch=universal",
+    "make:dev": "cross-env-shell ENV=dev electron-forge make ",
     "make:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make",
     "publish": "node process/gen_manifest && cross-env-shell ENV=dev electron-forge publish --arch=universal",
     "publish:devprod": "node process/gen_manifest && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
