--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "eslint-import-resolver-custom-alias": "^1.3.0",
     "follow-redirects": "^1.15.2",
+    "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
     "kitsu": "^10.0.2",
     "nodemailer": "^6.8.0"
