--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@electron-forge/plugin-webpack": "^6.0.0-beta.68",
     "@electron-forge/publisher-s3": "^6.0.0-beta.68",
     "@electron/universal": "^1.3.3",
-    "@types/nodemailer": "^6.4.6",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
@@ -67,7 +66,6 @@
     "follow-redirects": "^1.15.2",
     "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
-    "kitsu": "^10.0.2",
-    "nodemailer": "^6.8.0"
+    "kitsu": "^10.0.2"
   }
 }
