--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "desktop-electron-webpack",
   "productName": "Bestcycling TV",
-  "version": "5.1.6",
+  "version": "5.1.8",
   "description": "Aplicación de escritorio Bestcycling desarrollada con electron",
   "main": ".webpack/main",
   "scripts": {
@@ -9,45 +9,50 @@
     "dev": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge start",
     "package": "electron-forge package",
     "make": "cross-env-shell ENV=prod electron-forge make --arch=universal",
-    "make:dev": "cross-env-shell ENV=dev electron-forge make ",
-    "make:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make",
-    "publish": "node process/gen_manifest && cross-env-shell ENV=dev electron-forge publish --arch=universal",
-    "publish:devprod": "node process/gen_manifest && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
+    "make:macos": "cross-env-shell ENV=prod electron-forge make --arch=universal",
+    "make:macos:dev": "cross-env-shell ENV=dev electron-forge make ",
+    "make:macos:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make",
+    "make:win:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32,x64",
+    "push:macos": "cross-env-shell ENV=dev electron-forge publish --arch=universal",
+    "push:win": "cross-env-shell ENV=dev electron-forge publish --arch=ia32,x64",
+    "push:macos:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
+    "push:win:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=ia32,x64",
+    "publish": "node process/gen_manifest --channel=qiqe-temp",
+    "publish:beta": "node process/gen_manifest --channel=qiqe-temp",
+    "publish:revision": "node process/gen_manifest --channel=qiqe-temp",
     "lint": "eslint --ext .ts,.tsx .",
     "test": "jest"
   },
   "keywords": [],
   "author": {
-    "name": "Enrique Llopis",
-    "email": "enrique@bestcycling.es"
+    "name": "Bestcycling",
+    "email": "info@bestcycling.es"
   },
   "license": "MIT",
   "config": {
     "forge": "./forge.config.js"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.68",
-    "@electron-forge/maker-deb": "^6.0.0-beta.68",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.68",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.68",
-    "@electron-forge/maker-zip": "^6.0.0-beta.68",
-    "@electron-forge/plugin-webpack": "^6.0.0-beta.68",
-    "@electron-forge/publisher-s3": "^6.0.0-beta.68",
+    "@electron-forge/cli": "^6.0.0",
+    "@electron-forge/maker-squirrel": "^6.0.0",
+    "@electron-forge/maker-dmg": "^6.0.0",
+    "@electron-forge/maker-zip": "^6.0.0",
+    "@electron-forge/plugin-webpack": "^6.0.0",
+    "@electron-forge/publisher-s3": "^6.0.0",
     "@electron/universal": "^1.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
-    "aws-sdk": "^2.1241.0",
+    "aws-sdk": "^2.1248.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "electron": "^21.2.0",
-    "eslint": "^8.26.0",
+    "eslint": "^8.27.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "jest": "^29.2.2",
     "node-loader": "^2.0.0",
-    "npm": "^8.19.2",
     "style-loader": "^3.3.1",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
@@ -55,7 +60,6 @@
   },
   "dependencies": {
     "@commonify/lowdb": "^3.0.0",
-    "@electron-forge/maker-dmg": "^6.0.0-beta.68",
     "@types/follow-redirects": "^1.14.1",
     "@types/fs-extra": "^9.0.13",
     "axios": "^1.1.3",
