--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "desktop-electron-webpack",
   "productName": "Bestcycling TV",
-  "version": "5.1.8",
+  "version": "5.1.9",
   "description": "Aplicación de escritorio Bestcycling desarrollada con electron",
   "main": ".webpack/main",
   "scripts": {
@@ -13,8 +13,8 @@
     "make:macos:dev": "cross-env-shell ENV=dev electron-forge make ",
     "make:macos:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make",
     "make:win:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32,x64",
-    "push:macos": "cross-env-shell ENV=dev electron-forge publish --arch=universal",
-    "push:win": "cross-env-shell ENV=dev electron-forge publish --arch=ia32,x64",
+    "push:macos": "cross-env-shell ENV=prod electron-forge publish --arch=universal",
+    "push:win": "cross-env-shell ENV=prod electron-forge publish --arch=ia32,x64",
     "push:macos:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
     "push:win:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=ia32,x64",
     "publish": "node process/gen_manifest --channel=qiqe-temp",
