--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0",
-    "@electron-forge/maker-squirrel": "^6.0.0",
     "@electron-forge/maker-dmg": "^6.0.0",
+    "@electron-forge/maker-squirrel": "^6.0.0",
     "@electron-forge/maker-zip": "^6.0.0",
     "@electron-forge/plugin-webpack": "^6.0.0",
     "@electron-forge/publisher-s3": "^6.0.0",
@@ -59,6 +59,7 @@
     "typescript": "~4.8.4"
   },
   "dependencies": {
+    "@abandonware/noble": "^1.9.2-15",
     "@commonify/lowdb": "^3.0.0",
     "@types/follow-redirects": "^1.14.1",
     "@types/fs-extra": "^9.0.13",
