--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@commonify/lowdb": "^3.0.0",
     "@types/follow-redirects": "^1.14.1",
     "@types/fs-extra": "^9.0.13",
+    "async-lock": "^1.4.0",
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
