make and publish config

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "desktop-electron-webpack",
   "productName": "Bestcycling TV",
   "version": "4.0.1",
-  "description": "Aplicación de escritorio Bestcycling desarrollada con electron",
+  "description": "Aplicación de escritorio BestcyclingTV.",
   "main": ".webpack/main",
   "scripts": {
     "start": "cross-env-shell ENV=dev electron-forge start",
@@ -10,9 +10,10 @@
     "package": "electron-forge package",
     "make": "cross-env-shell ENV=prod electron-forge make --arch=universal",
     "make:macos": "cross-env-shell ENV=prod electron-forge make --arch=universal",
-    "make:macos:dev": "cross-env-shell ENV=dev electron-forge make ",
+    "make:macos:dev": "cross-env-shell ENV=dev electron-forge make",
     "make:macos:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make",
-    "make:win:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32,x64",
+    "make:win": "cross-env-shell ENV=prod electron-forge make --arch=ia32,x64 --platform=win32",
+    "make:win:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32,x64 --platform=win32",
     "push:macos": "cross-env-shell ENV=prod electron-forge publish --arch=universal",
     "push:win": "cross-env-shell ENV=prod electron-forge publish --arch=ia32,x64",
     "push:macos:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
