fix: compile win and macos

--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "make:win:devprod:x64": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=x64",
     "make:win:devprod:ia32": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32",
     "push:macos": "cross-env-shell ENV=prod electron-forge publish --arch=universal",
-    "push:win": "cross-env-shell ENV=prod electron-forge publish --arch=ia32,x64",
+    "push:win": "npm run push:win:x64 && npm run push:win:ia32",
+    "push:win:x64": "cross-env-shell ENV=prod electron-forge publish --arch=x64",
+    "push:win:ia32": "cross-env-shell ENV=prod electron-forge publish --arch=ia32",
     "push:macos:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
-    "push:win:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=ia32, x64",
+    "push:win:devprod": "npm run push:win:devprod:x64 && npm run push:win:devprod:ia32",
+    "push:win:devprod:ia32": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=ia32",
+    "push:win:devprod:x64": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=x64",
+
     "publish": "node process/gen_manifest --channel=qiqe-temp",
     "publish:beta": "node process/gen_manifest --channel=beta",
     "publish:revision": "node process/gen_manifest --channel=revision",
