--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "push:win:devprod": "npm run push:win:devprod:x64 && npm run push:win:devprod:ia32",
     "push:win:devprod:ia32": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=ia32",
     "push:win:devprod:x64": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=x64",
-
     "publish": "node process/gen_manifest --channel=qiqe-temp",
     "publish:beta": "node process/gen_manifest --channel=beta",
     "publish:revision": "node process/gen_manifest --channel=revision",
@@ -51,6 +50,7 @@
     "@typescript-eslint/parser": "^5.42.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "aws-sdk": "^2.1248.0",
+    "bufferutil": "^4.0.7",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "electron": "^21.2.0",
@@ -59,11 +59,14 @@
     "eslint-plugin-import": "^2.26.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "jest": "^29.2.2",
+    "mock-aws-s3": "^4.0.2",
+    "nock": "^13.3.0",
     "node-loader": "^2.0.0",
     "style-loader": "^3.3.1",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
-    "typescript": "~4.8.4"
+    "typescript": "~4.8.4",
+    "utf-8-validate": "^5.0.10"
   },
   "dependencies": {
     "@abandonware/noble": "^1.9.2-15",
