--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "make:macos": "cross-env-shell ENV=prod electron-forge make --arch=universal",
     "make:macos:dev": "cross-env-shell ENV=dev electron-forge make ",
     "make:macos:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make",
+    "make:win": "npm run make:win:x64 && make:win:ia32",
+    "make:win:x64": "cross-env-shell ENV=prod electron-forge make --arch=x64",
+    "make:win:ia32": "cross-env-shell ENV=prod electron-forge make --arch=ia32",
     "make:win:devprod": "npm run make:win:devprod:x64 && make:win:devprod:ia32",
     "make:win:devprod:x64": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=x64",
     "make:win:devprod:ia32": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32",
