fix:add premake

--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "start": "cross-env-shell ENV=dev electron-forge start",
     "dev": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge start",
     "package": "electron-forge package",
-    "make": "cross-env-shell ENV=prod electron-forge make --arch=universal",
-    "make:macos": "cross-env-shell ENV=prod electron-forge make --arch=universal",
-    "make:macos:dev": "cross-env-shell ENV=dev electron-forge make ",
-    "make:macos:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make",
+    "make": "npm run premake:macos && cross-env-shell ENV=prod electron-forge make --arch=universal",
+    "make:macos": "npm run premake:macos && cross-env-shell ENV=prod electron-forge make --arch=universal",
+    "make:macos:dev": "npm run premake:macos && cross-env-shell ENV=dev electron-forge make ",
+    "make:macos:devprod": "npm run premake:macos && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make",
     "make:win": "npm run make:win:x64 && make:win:ia32",
     "make:win:x64": "cross-env-shell ENV=prod electron-forge make --arch=x64",
     "make:win:ia32": "cross-env-shell ENV=prod electron-forge make --arch=ia32",
-    "make:win:devprod": "npm run make:win:devprod:x64 && make:win:devprod:ia32",
-    "make:win:devprod:x64": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=x64",
-    "make:win:devprod:ia32": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32",
+    "make:win:devprod": "npm run make:win:devprod:x64 && make:win:devprod:ia32 ",
+    "make:win:devprod:x64": "npm run premake:win && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=x64",
+    "make:win:devprod:ia32": "npm run premake:win cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32",
     "push:macos": "cross-env-shell ENV=prod electron-forge publish --arch=universal",
     "push:win": "npm run push:win:x64 && npm run push:win:ia32",
-    "push:win:x64": "cross-env-shell ENV=prod electron-forge publish --arch=x64",
-    "push:win:ia32": "cross-env-shell ENV=prod electron-forge publish --arch=ia32",
+    "push:win:x64": "npm run premake:win  cross-env-shell ENV=prod electron-forge publish --arch=x64",
+    "push:win:ia32": "npm run premake:win  cross-env-shell ENV=prod electron-forge publish --arch=ia32",
     "push:macos:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
     "push:win:devprod": "npm run push:win:devprod:x64 && npm run push:win:devprod:ia32",
     "push:win:devprod:ia32": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=ia32",
@@ -30,7 +30,10 @@
     "publish:beta": "node process/gen_manifest --channel=beta",
     "publish:revision": "node process/gen_manifest --channel=revision",
     "lint": "eslint --ext .ts,.tsx .",
-    "test": "jest"
+    "test": "jest",
+    "premake:macos": "cp premake/mac/resolve-bindings.js node_modules/@abandonware/noble/lib/resolve-bindings.js",
+    "premake:win": "cp premake/win/resolve-bindings.js node_modules/@abandonware/noble/lib/resolve-bindings.js"
+
   },
   "keywords": [],
   "author": {
@@ -72,7 +75,7 @@
     "utf-8-validate": "^5.0.10"
   },
   "dependencies": {
-    "@abandonware/noble": "^1.9.2-15",
+    "@abandonware/noble": "1.9.2-15",
     "@commonify/lowdb": "^3.0.0",
     "@types/follow-redirects": "^1.14.1",
     "@types/fs-extra": "^9.0.13",
