fix: rebuild .node binaries

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "desktop-electron-webpack",
   "productName": "Bestcycling TV",
-  "version": "4.0.3",
+  "version": "4.0.4",
   "description": "Aplicación de escritorio Bestcycling desarrollada con electron",
   "main": ".webpack/main",
   "scripts": {
@@ -12,27 +12,30 @@
     "make:macos": "npm run premake:macos && cross-env-shell ENV=prod electron-forge make --arch=universal",
     "make:macos:dev": "npm run premake:macos && cross-env-shell ENV=dev electron-forge make --arch=universal",
     "make:macos:devprod": "npm run premake:macos && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=universal",
-    "make:win": "npm run make:win:x64 && make:win:ia32",
-    "make:win:x64": "cross-env-shell ENV=prod electron-forge make --arch=x64",
-    "make:win:ia32": "cross-env-shell ENV=prod electron-forge make --arch=ia32",
-    "make:win:devprod": "npm run make:win:devprod:x64 && make:win:devprod:ia32 ",
-    "make:win:devprod:x64": "npm run premake:win && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=x64",
-    "make:win:devprod:ia32": "npm run premake:win && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32",
+    "make:win": "npm run make:win:x64 && npm run make:win:ia32",
+    "make:win:x64": "npm run premake:win && npm run rebuild:x64 && cross-env-shell ENV=prod electron-forge make --arch=x64",
+    "make:win:ia32": "npm run premake:win && npm run rebuild:ia32 && cross-env-shell ENV=prod electron-forge make --arch=ia32",
+    "make:win:devprod": "npm run make:win:devprod:x64 && npm run  make:win:devprod:ia32 ",
+    "make:win:devprod:x64": "npm run premake:win &&  npm run rebuild:x64 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=x64",
+    "make:win:devprod:ia32": "npm run premake:win &&  npm run rebuild:ia32 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32",
     "push:macos": "cross-env-shell ENV=prod electron-forge publish --arch=universal",
     "push:win": "npm run push:win:x64 && npm run push:win:ia32",
-    "push:win:x64": "npm run premake:win && cross-env-shell ENV=prod electron-forge publish --arch=x64",
-    "push:win:ia32": "npm run premake:win && cross-env-shell ENV=prod electron-forge publish --arch=ia32",
+    "push:win:x64": "npm run premake:win && npm run rebuild:x64 && cross-env-shell ENV=prod electron-forge publish --arch=x64",
+    "push:win:ia32": "npm run premake:win && npm run rebuild:ia32 && cross-env-shell ENV=prod electron-forge publish --arch=ia32",
     "push:macos:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
     "push:win:devprod": "npm run push:win:devprod:x64 && npm run push:win:devprod:ia32",
-    "push:win:devprod:ia32": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=ia32",
-    "push:win:devprod:x64": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=x64",
+    "push:win:devprod:ia32": "npm run premake:win && npm run rebuild:ia32 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=ia32",
+    "push:win:devprod:x64": "npm run premake:win && npm run rebuild:x64 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=x64",
     "publish": "node process/gen_manifest  --channel=production",
     "publish:beta": "node process/gen_manifest --channel=beta",
     "publish:revision": "node process/gen_manifest --channel=revision",
     "lint": "eslint --ext .ts,.tsx .",
     "test": "jest",
     "premake:macos": "cp premake/mac/resolve-bindings.js node_modules/@abandonware/noble/lib/resolve-bindings.js",
-    "premake:win": "cpx premake/win/resolve-bindings.js node_modules/@abandonware/noble/lib/"
+    "premake:win": "cpx premake/win/resolve-bindings.js node_modules/@abandonware/noble/lib/",
+    "rebuild:ia32": "npm rebuild --arch=ia32 && cd ./node_modules/usb && node-gyp.cmd rebuild --arch=ia32 --verbose  && cd ../..",
+    "rebuild:x64": "npm rebuild --arch=x64 && cd ./node_modules/usb && node-gyp.cmd rebuild --arch=x64 --verbose && cd ../.."
+
   },
   "keywords": [],
   "author": {
