fix: add premake macos

--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "make:win:devprod": "npm run make:win:devprod:x64 && npm run  make:win:devprod:ia32 ",
     "make:win:devprod:x64": "npm run premake:win &&  npm run rebuild:x64 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=x64",
     "make:win:devprod:ia32": "npm run premake:win &&  npm run rebuild:ia32 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32",
-    "push:macos": "cross-env-shell ENV=prod electron-forge publish --arch=universal",
+    "push:macos": "npm run premake:macos && cross-env-shell ENV=prod electron-forge publish --arch=universal",
     "push:win": "npm run push:win:x64 && npm run push:win:ia32",
     "push:win:x64": "npm run premake:win && npm run rebuild:x64 && cross-env-shell ENV=prod electron-forge publish --arch=x64",
     "push:win:ia32": "npm run premake:win && npm run rebuild:ia32 && cross-env-shell ENV=prod electron-forge publish --arch=ia32",
-    "push:macos:devprod": "cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
+    "push:macos:devprod": "npm run premake:macos && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
     "push:win:devprod": "npm run push:win:devprod:x64 && npm run push:win:devprod:ia32",
     "push:win:devprod:ia32": "npm run premake:win && npm run rebuild:ia32 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=ia32",
     "push:win:devprod:x64": "npm run premake:win && npm run rebuild:x64 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=x64",
