--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "typescript": "~4.8.4",
-    "utf-8-validate": "^5.0.10"
+    "utf-8-validate": "^5.0.10",
+    "nexe": "^4.0.0-rc.2"
   },
   "dependencies": {
     "@abandonware/noble": "1.9.2-15",
