--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "desktop-electron-webpack",
   "productName": "Bestcycling TV",
-  "version": "4.0.17",
+  "version": "4.0.16",
   "description": "Aplicación de escritorio Bestcycling.",
   "main": ".webpack/main",
   "scripts": {
@@ -19,6 +19,7 @@
     "make:win:devprod": "npm run make:win:devprod:x64 && npm run  make:win:devprod:ia32 ",
     "make:win:devprod:x64": "npm run premake:win &&  npm run rebuild:x64 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=x64",
     "make:win:devprod:ia32": "npm run premake:win &&  npm run rebuild:ia32 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32",
+    "package:win": "gulp",
     "push:macos": "npm run premake:macos && cross-env-shell ENV=prod electron-forge publish --arch=universal",
     "push:win": "npm run push:win:x64 && npm run push:win:ia32",
     "push:win:x64": "npm run premake:win && npm run rebuild:x64 && cross-env-shell ENV=prod electron-forge publish --arch=x64",
@@ -66,6 +67,9 @@
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "gulp": "^4.0.2",
+    "gulp-electron": "^0.1.3",
+    "gulp-inno": "^0.3.0",
     "inquirer": "^9.1.4",
     "jest": "^29.2.2",
     "mock-aws-s3": "^4.0.2",
@@ -75,8 +79,7 @@
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "typescript": "~4.8.4",
-    "utf-8-validate": "^5.0.10",
-    "nexe": "^4.0.0-rc.2"
+    "utf-8-validate": "^5.0.10"
   },
   "dependencies": {
     "@abandonware/noble": "1.9.2-15",
