--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "make:win": "npm run make:win:ia32 && npm run make:win:x64",
     "make:win:x64": "npm run premake:win && npm run rebuild:x64 && cross-env-shell ENV=prod electron-forge make --arch=x64",
     "make:win:ia32": "npm run premake:win && npm run rebuild:ia32 && cross-env-shell ENV=prod electron-forge make --arch=ia32",
-    "make:win:devprod": "npm run make:win:devprod:x64 && npm run  make:win:devprod:ia32 ",
+    "make:win:devprod": "npm run make:win:devprod:ia32 && npm run  make:win:devprod:x64",
     "make:win:devprod:x64": "npm run premake:win &&  npm run rebuild:x64 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=x64",
     "make:win:devprod:ia32": "npm run premake:win &&  npm run rebuild:ia32 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge make --arch=ia32",
     "push:macos": "npm run premake:macos && cross-env-shell ENV=prod electron-forge publish --arch=universal",
-    "push:win": "npm run push:win:x64 && npm run push:win:ia32",
+    "push:win": "npm run push:win:ia32 && npm run push:win:x64",
     "push:win:x64": "npm run premake:win && npm run rebuild:x64 && cross-env-shell ENV=prod electron-forge publish --arch=x64",
     "push:win:ia32": "npm run premake:win && npm run rebuild:ia32 && cross-env-shell ENV=prod electron-forge publish --arch=ia32",
     "push:macos:devprod": "npm run premake:macos && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=universal",
-    "push:win:devprod": "npm run push:win:devprod:x64 && npm run push:win:devprod:ia32",
+    "push:win:devprod": "npm run push:win:devprod:ia32 && npm run push:win:devprod:x64",
     "push:win:devprod:ia32": "npm run premake:win && npm run rebuild:ia32 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=ia32",
     "push:win:devprod:x64": "npm run premake:win && npm run rebuild:x64 && cross-env-shell ENV=prod FLAVOUR=2 electron-forge publish --arch=x64",
     "publish:beta": "node process/gen_manifest --channel=beta",
@@ -71,6 +71,7 @@
     "gulp-inno": "^0.3.0",
     "inquirer": "^9.1.4",
     "jest": "^29.2.2",
+    "maker-inno-setup": "file:makers/maker-inno-setup",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.3.0",
     "node-loader": "^2.0.0",
